# frame_comparator

./: .gitmodules  Cargo.toml
frame_comp_app/: Cargo.toml
frame_comp_app/src/: app.rs  comparator.rs  main.rs
frame_comp_app/src/vulkan/: commands.rs  debug.rs  device.rs  frame_comparator.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  model.rs  physical_device.rs  pipeline.rs  queue.rs  render_pass.rs  swapchain.rs  synchronization.rs
frame_comp_app/src/vulkan/buffers/: buffer.rs  depth_buffer.rs  index_buffer.rs  uniform_buffer.rs  vertex_buffer.rs
frame_comp_app/src/vulkan/shaders/: compile.sh  depth_frag.spv  depth_shader.frag  depth_shader.vert  depth_vert.spv
